--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="MeganSec - Bringing Security Solution for Consumers and Small Businesses. Coming Soon.">
-    <title>MeganSec | Coming Soon</title>
+    <meta name="description" content="MagenSec - Bringing Security Solution for Consumers and Small Businesses. Coming Soon.">
+    <title>MagenSec | Coming Soon</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,15 +57,15 @@
 <body>
 
     <div class="container">
-        <img src="https://via.placeholder.com/120x60?text=MeganSec" alt="MeganSec Logo" class="logo">
-        <div class="header">MeganSec Security Solutions</div>
+        <img src="https://via.placeholder.com/120x60?text=MagenSec" alt="MagenSec Logo" class="logo">
+        <div class="header">MagenSec Security Solutions</div>
         <div class="subheader">Bringing affordable protection for consumers and small businesses. Coming soon!</div>
-        <p>We understand the importance of keeping your data safe, but we also understand that enterprise-level security can be expensive. That's why at MeganSec we created a reliable, cost-effective security solution tailored for individuals and small businesses.</p>
+        <p>We understand the importance of keeping your data safe, but we also understand that enterprise-level security can be expensive. That's why at MagenSec we created a reliable, cost-effective security solution tailored for individuals and small businesses.</p>
         <p>Stay tuned for more details and be the first to know when we launch!</p>
         <a href="" class="cta">Sign Up for Updates</a>
 
         <div class="footer">
-            <p>&copy; 2025 MeganSec. All rights reserved.</p>
+            <p>&copy; 2025 MagenSec. All rights reserved.</p>
         </div>
     </div>
 
