--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
 
     <div class="container">
-        <img src="https://via.placeholder.com/120x60?text=MagenSec" alt="MagenSec Logo" class="logo">
+        <img src="green_cropped.jpg" alt="MagenSec Logo" class="logo">
         <div class="header">MagenSec Security Solutions</div>
         <div class="subheader">Bringing affordable protection for consumers and small businesses. Coming soon!</div>
         <p>We understand the importance of keeping your data safe, but we also understand that enterprise-level security can be expensive. That's why at MagenSec we created a reliable, cost-effective security solution tailored for individuals and small businesses.</p>
