--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         .container {
             text-align: center;
-            background-color: white;
+            background-color: #FBEDD2;
             padding: 40px 60px;
             border-radius: 10px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
