--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <div class="subheader">Bringing affordable protection for consumers and small businesses. Coming soon!</div>
         <p>We understand the importance of keeping your data safe, but we also understand that enterprise-level security can be expensive. That's why at MagenSec we created a reliable, cost-effective security solution tailored for individuals and small businesses.</p>
         <p>Stay tuned for more details and be the first to know when we launch!</p>
-        <a href="" class="cta">Sign Up for Updates</a>
+        <a href="https://magensec.short.gy/x64msi" class="cta">Download Prerelase Package (Intel)</a>
+        <br />
+        <a href="https://magensec.short.gy/arm64msi" class="cta">Download Prerelase Package (ARM64)</a>
 
         <div class="footer">
             <p>&copy; 2025 MagenSec. All rights reserved.</p>
