--- a/index.html
+++ b/index.html
@@ -9,48 +9,64 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background: linear-gradient(to right, #4CAF50, #2E7D32);
+            color: #fff;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            text-align: center;
         }
         .container {
-            text-align: center;
-            background-color: #FBEDD2;
-            padding: 40px 60px;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            background: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            color: #333;
+            max-width: 500px;
+            width: 90%;
         }
         .logo {
-            width: 120px;
-            margin-bottom: 30px;
-        }
-        .header {
-            font-size: 32px;
-            color: #333;
+            width: 100px;
             margin-bottom: 20px;
         }
-        .subheader {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 40px;
-        }
-        .cta {
-            font-size: 18px;
-            color: #007BFF;
-            text-decoration: none;
+        .header {
+            font-size: 28px;
             font-weight: bold;
+            margin-bottom: 15px;
         }
-        .cta:hover {
-            text-decoration: underline;
+        .subheader {
+            font-size: 16px;
+            color: #555;
+            margin-bottom: 20px;
+        }
+        .countdown {
+            font-size: 24px;
+            font-weight: bold;
+            margin: 20px 0;
+            color: #d32f2f;
+        }
+        .cta-btn {
+            display: block;
+            background: #007BFF;
+            color: #fff;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 12px;
+            border-radius: 5px;
+            margin: 10px 0;
+            transition: 0.3s;
+        }
+        .cta-btn:hover {
+            background: #0056b3;
         }
         .footer {
-            font-size: 14px;
-            color: #888;
-            margin-top: 40px;
+            font-size: 12px;
+            color: #777;
+            margin-top: 30px;
         }
     </style>
 </head>
@@ -59,17 +75,48 @@
     <div class="container">
         <img src="green_cropped.jpg" alt="MagenSec Logo" class="logo">
         <div class="header">MagenSec Security Solutions</div>
-        <div class="subheader">Bringing affordable protection for consumers and small businesses. Coming soon!</div>
-        <p>We understand the importance of keeping your data safe, but we also understand that enterprise-level security can be expensive. That's why at MagenSec we created a reliable, cost-effective security solution tailored for individuals and small businesses.</p>
-        <p>Stay tuned for more details and be the first to know when we launch!</p>
-        <a href="https://magensec.short.gy/x64msi" class="cta">Download Prerelase Package (Intel)</a>
-        <br />
-        <a href="https://magensec.short.gy/arm64msi" class="cta">Download Prerelase Package (ARM64)</a>
+        <div class="subheader">Bringing affordable protection for consumers and small businesses.</div>
+
+        <div class="countdown" id="countdown">Launching in: --:--:--</div>
+
+        <p>We understand the importance of keeping your data safe. Stay tuned for more details and be the first to know when we launch!</p>
+
+        <a href="https://magensec.short.gy/x64msi" class="cta-btn">Download Preview (Intel/AMD)</a>
+        <a href="https://magensec.short.gy/arm64msi" class="cta-btn">Download Preview (ARM64)</a>
 
         <div class="footer">
             <p>&copy; 2025 MagenSec. All rights reserved.</p>
         </div>
     </div>
+
+    <script>
+        // Countdown Timer
+        function startCountdown() {
+            const launchDate = new Date("May 15, 2025 12:00:00").getTime(); 
+            const countdownElement = document.getElementById("countdown");
+
+            function updateCountdown() {
+                const now = new Date().getTime();
+                const timeLeft = launchDate - now;
+
+                if (timeLeft <= 0) {
+                    countdownElement.innerHTML = "We are LIVE!";
+                    return;
+                }
+
+                const days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+                const hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                const minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+                const seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+                countdownElement.innerHTML = `Launching in: ${days}d ${hours}h ${minutes}m ${seconds}s`;
+            }
+
+            setInterval(updateCountdown, 1000);
+        }
+
+        startCountdown();
+    </script>
 
 </body>
 </html>
