--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
         </ul>
 
         <div class="cta">
-            <a href="#">Get Protection Today!</a>
+            <a href="index.html">Get Protection Today!</a>
         </div>
 
         <div class="legal">
@@ -146,7 +146,7 @@
         </ul>
 
         <div class="cta">
-            <a href="#">Get Protection Today!</a>
+            <a href="index.html">Get Protection Today!</a>
         </div>
     </div>
 
