--- a/about.html
+++ b/about.html
@@ -87,16 +87,16 @@
 
         <h2>How Hackers Exploit Vulnerabilities</h2>
         <div class="ascii-box">
-            [ VULNERABILITY FOUND ]
-            ⬇
-            [ ATTACKER EXPLOITS IT ]
-            ⬇
-            [ MALWARE EXECUTED ]
-            ⬇
-            [ DATA STOLEN OR SYSTEM CONTROLLED ]
+            &#8203;     [ VULNERABILITY FOUND ] <br />
+            &#8203;                ⬇ <br />
+            &#8203;    [ ATTACKER EXPLOITS IT ] <br />
+            &#8203;                ⬇ <br />
+            &#8203;      [ MALWARE EXECUTED ] <br />
+            &#8203;                ⬇ <br />
+            [ DATA STOLEN OR SYSTEM CONTROLLED ] <br />
         </div>
 
-        <h3>Example Attack: Remote Code Execution (RCE)</h3>
+        <h4>Example Attack: Remote Code Execution (RCE)</h3>
         <ol>
             <li>🔴 A hacker finds a security flaw in outdated software.</li>
             <li>🔴 They send a malicious link or file to the victim.</li>
@@ -104,14 +104,14 @@
             <li>🔴 The hacker gains control of the system and installs malware.</li>
         </ol>
 
-        <p class="alert">🚨 <strong>How Our Product Helps:</strong> It detects and warns you <u>before</u> the hacker gets in!</p>
+        <p class="alert">🚨 <strong>How We Help:</strong> We detect and warn you <u>before</u> the hacker gets in!</p>
 
         <h2>Break the Attack Chain – Secure Your Devices</h2>
         <p>Updating your software <strong>removes the vulnerabilities hackers rely on</strong>. Our system alerts you when updates are needed, so you <strong>stay protected effortlessly.</strong></p>
 
         <div class="ascii-box">
-            [ VULNERABILITY FOUND ]  ----->  [ PATCH INSTALLED ]
-            🚫 ATTACK BLOCKED! 🚫
+            [ VULNERABILITY FOUND ]  ----->  [ PATCH INSTALLED ] <br />
+            &#8203;                🚫 ATTACK BLOCKED! 🚫
         </div>
 
         <ul>
@@ -121,22 +121,12 @@
         </ul>
 
         <h2>What You Need to Do</h2>
-        <p class="alert">📌 The vulnerability documented by this system <strong>requires action from you to stay safe.</strong></p>
+        <p class="alert">📌 The vulnerabile applications identified by this system <strong>requires action from you to stay safe.</strong></p>
         <ul>
             <li>✅ <strong>Update your software</strong> – Always install the latest security patches.</li>
             <li>✅ <strong>Stop using outdated software</strong> – If updates aren’t available, consider switching to a secure alternative.</li>
             <li>✅ <strong>Stay informed</strong> – Let our system <strong>alert you before hackers exploit vulnerabilities.</strong></li>
         </ul>
-
-        <div class="cta">
-            <a href="index.html">Get Protection Today!</a>
-        </div>
-
-        <div class="legal">
-            <h3>Legal Disclaimer</h3>
-            <p>The information provided in this system is for security awareness purposes only and is provided <strong>“as is” without warranty of any kind.</strong> The authors disclaim all warranties, either express or implied, including but not limited to <strong>merchantability and fitness for a particular purpose.</strong> In no event shall the authors or providers be liable for any damages, including direct, indirect, incidental, consequential, or loss of business profits.</p>
-            <p>Some states do not allow the exclusion or limitation of liability for consequential or incidental damages, so this limitation may not apply.</p>
-        </div>
 
         <h2>Why Choose Our Product?</h2>
         <ul>
@@ -145,6 +135,13 @@
             <li>🛡️ <strong>Always Up to Date</strong> – Detects the latest vulnerabilities before hackers exploit them.</li>
         </ul>
 
+        <div class="legal">
+            <h3>Legal Disclaimer</h3>
+            <p>The information provided in this system is for security awareness purposes only and is provided <strong>“as is” without warranty of any kind.</strong> The authors disclaim all warranties, either express or implied, including but not limited to <strong>merchantability and fitness for a particular purpose.</strong> In no event shall the authors or providers be liable for any damages, including direct, indirect, incidental, consequential, or loss of business profits.</p>
+            <p>Some states do not allow the exclusion or limitation of liability for consequential or incidental damages, so this limitation may not apply.</p>
+        </div>
+
+        <hr />
         <div class="cta">
             <a href="index.html">Get Protection Today!</a>
         </div>
