--- a/terms.html
+++ b/terms.html
@@ -1,6 +1,47 @@
+## Contact Us
 
 Contact information: talktomagensec@gmail.com
+
+## Terms and Conditions
+
 Effective date for policy: Mar 1 2025
+
 Limitation of liability and disclaimer of warranties: TBD
+
 Rules of conduct: TBD
+
 User restrictions: TBD
+
+## Shipping and Delivery
+
+Order processing and shipping time: 7 days
+
+Operating address: NA
+
+## Refund
+
+When things can be returned or exchanged: within 7 days if past purchase date
+
+How to initiate a return or exchange:  talktomagensec@gmail.com
+
+What is your refund processing time: It can take upto 20 days after refund/exchange request
+
+## Privacy
+
+What personal information you collect from your website/app users
+ - Installed Application
+ - Discovered Vulnerabilities and Risks
+ - Logged-on User
+ - Machine metadata
+
+How you collect the information
+ - Telemetry
+
+How you use any collected information
+ - Support and Product Improvement
+
+How you keep information safe
+ - Secured in backend with limited access
+
+Clauses on information sharing with any third parties
+ - We don't share data with 3rd party
