--- a/privacy.html
+++ b/privacy.html
@@ -7,11 +7,11 @@
 </div>
 <div class="MuiBox-root css-1t0omtx" style="-webkit-text-stroke-width:0px;box-sizing:inherit;color:rgb(33, 53, 84);font-family:Lato, sans-serif;font-size:16px;font-style:normal;font-variant-caps:normal;font-variant-ligatures:normal;font-weight:400;height:auto;letter-spacing:normal;orphans:2;overflow-y:unset;text-align:start;text-decoration-color:initial;text-decoration-style:initial;text-decoration-thickness:initial;text-indent:0px;text-transform:none;transition:height 600ms cubic-bezier(0.4, 0, 0.2, 1);white-space:normal;widows:2;word-spacing:0px;">
     <p class="updated-date" style="box-sizing:inherit;">Last updated on Mar 1 2025</p>
-    <p class="content-text" style="box-sizing:inherit;">This privacy policy sets out how Shweta Bhatnagar uses and protects any information that you give Shweta Bhatnagar when you visit their website and/or agree to purchase from them.</p>
+    <p class="content-text" style="box-sizing:inherit;">This privacy policy sets out how MagenSec uses and protects any information that you give MagenSec when you visit their website and/or agree to purchase from them.</p>
     <p class="content-text" style="box-sizing:inherit;">&nbsp;</p>
-    <p class="content-text" style="box-sizing:inherit;">Shweta Bhatnagar is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, and then you can be assured that it will only be used in accordance with this privacy statement.</p>
+    <p class="content-text" style="box-sizing:inherit;">MagenSec is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, and then you can be assured that it will only be used in accordance with this privacy statement.</p>
     <p class="content-text" style="box-sizing:inherit;">&nbsp;</p>
-    <p class="content-text" style="box-sizing:inherit;">Shweta Bhatnagar may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you adhere to these changes.</p>
+    <p class="content-text" style="box-sizing:inherit;">MagenSec may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you adhere to these changes.</p>
     <p class="content-text" style="box-sizing:inherit;">&nbsp;</p>
     <p class="content-text" style="box-sizing:inherit;"><strong style="box-sizing:inherit;">We may collect the following information:</strong></p>
     <ul class="unorder-list" style="box-sizing:inherit;">
@@ -68,6 +68,6 @@
     </ul>
     <p class="content-text" style="box-sizing:inherit;">&nbsp;</p>
     <p class="content-text" style="box-sizing:inherit;">We will not sell, distribute or lease your personal information to third parties unless we have your permission or are required by law to do so. We may use your personal information to send you promotional information about third parties which we think you may find interesting if you tell us that you wish this to happen.</p>
-    <p class="content-text" style="box-sizing:inherit;">If you believe that any information we are holding on you is incorrect or incomplete, please write to Garnet 1208, MyHome Jewel, Madinaguda, Hafizpet Hyderabad TELANGANA 500049 . or contact us at or talktomagensec@gmail.com as soon as possible. We will promptly correct any information found to be incorrect.</p>
+    <p class="content-text" style="box-sizing:inherit;">If you believe that any information we are holding on you is incorrect or incomplete, please contact us at or talktomagensec@gmail.com as soon as possible. We will promptly correct any information found to be incorrect.</p>
     <p>&nbsp;</p>
 </div>
