--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 
         <hr />
         <div class="cta">
-            <a href="index.html">Get Protection Today!</a>
+            <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
         </div>
     </div>
 
