--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <a href="https://magensec.short.gy/x64msi" class="cta-btn">Download Preview (Intel/AMD)</a>
         <a href="https://magensec.short.gy/arm64msi" class="cta-btn">Download Preview (ARM64)</a>
 
+        <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
+
         <div class="footer">
             <p>&copy; 2025 MagenSec. All rights reserved.</p>
         </div>
