--- a/terms.html
+++ b/terms.html
@@ -1,47 +1,85 @@
-## Contact Us
+<!DOCTYPE html>
+<html>
+<head>
+<title>Terms & Conditions, Policies & Contact</title>
+<style>
+body {
+  font-family: sans-serif;
+  line-height: 1.6;
+  margin: 20px;
+}
+h2 {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
+}
+</style>
+</head>
+<body>
 
-Contact information: talktomagensec@gmail.com
+  <h1>Terms & Conditions, Policies & Contact</h1>
 
-## Terms and Conditions
+<p><a href="/">Back to Home</a></p>
 
-Effective date for policy: Mar 1 2025
+  <h2>Terms and Conditions</h2>
 
-Limitation of liability and disclaimer of warranties: TBD
+  <p>Welcome to MagenSec Kshetrapal. By downloading, installing, or using our software, you agree to comply with and be bound by the following terms and conditions. Please read them carefully.</p>
 
-Rules of conduct: TBD
+  <ol>
+    <li><strong>Software Description:</strong> MagenSec Kshetrapal is an auditing tool designed to help users identify potential security vulnerabilities on their devices. It utilizes public vulnerability databases and other information sources to perform its audits.</li>
+    <li><strong>No System Alterations:</strong> Our software does not make any changes to your system unless explicitly requested by the user. It is primarily an auditing tool.</li>
+    <li><strong>Limitation of Liability:</strong>
+      <ul>
+        <li>MagenSec Kshetrapal is provided "as is" and "as available." We make no warranties, express or implied, regarding the accuracy, completeness, or reliability of the software's output.</li>
+        <li>We shall not be liable for any errors, inaccuracies, or omissions in the software's reports, including but not limited to false positives or true negatives.</li>
+        <li>You acknowledge and agree that your use of the software is at your sole risk. We shall not be liable for any direct, indirect, incidental, consequential, or punitive damages arising from your use of the software.</li>
+        <li>We do not guarantee that the software will identify all potential vulnerabilities on your system.</li>
+        <li>We are not responsible for any damage or loss resulting from the use of information provided by our software.</li>
+      </ul>
+    </li>
+    <li><strong>Subscription and Payment:</strong>
+      <ul>
+        <li>The software is free to download, but full functionality requires a paid monthly or annual subscription.</li>
+        <li>License activation may experience delays due to technical issues.</li>
+      </ul>
+    </li>
+    <li><strong>License Activation:</strong> Customers should contact talktomagenec@gmail.com for any license activation or technical issues.</li>
+    <li><strong>Changes to Terms:</strong> We reserve the right to modify these terms and conditions at any time. Any changes will be posted on this page.</li>
+  </ol>
 
-User restrictions: TBD
+  <h2>Contact Details</h2>
 
-## Shipping and Delivery
+  <p>For support, inquiries, or subscription cancellations, please contact us at:</p>
+  <p>Email: <a href="mailto:talktomagenec@gmail.com">talktomagenec@gmail.com</a></p>
 
-Order processing and shipping time: 7 days
+  <h2>Shipping and Delivery</h2>
 
-Operating address: NA
+  <p>As MagenSec Kshetrapal is a digital product, there is no physical shipping. Delivery consists of granting access to the full functionality of the software upon successful subscription and license activation. Please check your email and the software itself for confirmation of activation. If you have any problems, please contact us.</p>
 
-## Refund
+  <h2>Refund Policy</h2>
 
-When things can be returned or exchanged: within 7 days if past purchase date
+  <p>All subscription payments are non-refundable. However, you may cancel your subscription at any time. To cancel your subscription, please email us at talktomagenec@gmail.com. Cancellations will be processed within 15 business days.</p>
 
-How to initiate a return or exchange:  talktomagensec@gmail.com
+  <h2>Privacy Policy</h2>
 
-What is your refund processing time: It can take upto 20 days after refund/exchange request
+  <p>We are committed to protecting your privacy. This policy explains how we collect, use, and protect your information.</p>
 
-## Privacy
+  <ol>
+    <li><strong>Information Collection:</strong>
+      <ul>
+        <li>We collect information about your device, including installed software, detected vulnerabilities, logged-on user, and device metadata.</li>
+        <li>We collect your email address.</li>
+        <li>We use OAuth (primarily Google) for user authentication and collect your username, profile picture, and email address.</li>
+      </ul>
+    </li>
+    <li><strong>Use of Information:</strong>
+      <ul>
+        <li>We use the collected information to improve our software, provide customer support, and enhance user experience.</li>
+        <li>We do not sell or share your personal information with third parties except as required by law.</li>
+      </ul>
+    </li>
+    <li><strong>Data Security:</strong> We take reasonable measures to protect your data from unauthorized access, use, or disclosure.</li>
+    <li><strong>Data Retention:</strong> We retain your data for as long as necessary to provide you with our services and as required by law.</li>
+  </ol>
 
-What personal information you collect from your website/app users
- - Installed Application
- - Discovered Vulnerabilities and Risks
- - Logged-on User
- - Machine metadata
-
-How you collect the information
- - Telemetry
-
-How you use any collected information
- - Support and Product Improvement
-
-How you keep information safe
- - Secured in backend with limited access
-
-Clauses on information sharing with any third parties
- - We don't share data with 3rd party
+</body>
+</html>
