--- a/index.html
+++ b/index.html
@@ -54,18 +54,27 @@
             background-color: #f0f0f0;
         }
         .razorpay-payment-button {
-          background-color: #3498db;
-          color: white;
-          padding: 10px 20px;
-          border: none;
-          border-radius: 5px;
-          cursor: pointer;
+            background-color: #3498db;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
         .mobile-message {
-          text-align: center;
-          color: red;
-          padding: 20px;
-          display: none; /* Hidden by default */
+            text-align: center;
+            color: red;
+            padding: 20px;
+            display: none; /* Hidden by default */
+        }
+        .payment-options {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .payment-option {
+            text-align: center;
         }
     </style>
 </head>
@@ -106,7 +115,21 @@
             <h2>Unlock Advanced Features</h2>
             <p>Subscribe to get full access to Kshetrapal's powerful features.</p>
 
-            <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
+            <div class="payment-options">
+                <div class="payment-option">
+                    <h3>India</h3>
+                    <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
+                </div>
+                <div class="payment-option">
+                    <h3>International</h3>
+                    <style>.pp-EZP5AJQHDDVM8{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
+                    <form action="https://www.paypal.com/ncp/payment/EZP5AJQHDDVM8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+                        <input class="pp-EZP5AJQHDDVM8" type="submit" value="Pay Now" />
+                        <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+                        <section> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+                    </form>
+                </div>
+            </div>
 
             <p><a href="/terms.html">Terms and Conditions</a></p>
         </section>
@@ -115,6 +138,5 @@
     <footer>
         <p>&copy; 2024 MagenSec. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
