--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 
         <section class="payment">
             <h2>Unlock Advanced Features</h2>
-            <p>Subscribe to get full access to Kshetrapal's powerful features.</p>
+            <p>Pay annual charges to get full access to Kshetrapal's powerful features.</p>
 
             <div class="payment-options">
                 <div class="payment-option">
                     <h3>India</h3>
-                    <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
+                    <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q5YJJ4z0gkjNWy" async> </script></form>
                 </div>
                 <div class="payment-option">
                     <h3>International</h3>
