Update payment option

--- a/index.html
+++ b/index.html
@@ -113,22 +113,10 @@
 
         <section class="payment">
             <h2>Unlock Advanced Features</h2>
-            <p>Pay annual charges to get full access to Kshetrapal's powerful features.</p>
+            <p>Buy Credit to get full access to Kshetrapal's powerful features. You can buy and use on multiple devices.</p>
 
             <div class="payment-options">
-                <div class="payment-option">
-                    <h3>India</h3>
-                    <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q5YJJ4z0gkjNWy" async> </script></form>
-                </div>
-                <div class="payment-option">
-                    <h3>International</h3>
-                    <style>.pp-EZP5AJQHDDVM8{text-align:center;border:none;border-radius:0.25rem;min-width:11.625rem;padding:0 2rem;height:2.625rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:1rem;line-height:1.25rem;cursor:pointer;}</style>
-                    <form action="https://www.paypal.com/ncp/payment/EZP5AJQHDDVM8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
-                        <input class="pp-EZP5AJQHDDVM8" type="submit" value="Pay Now" />
-                        <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
-                        <section> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
-                    </form>
-                </div>
+                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q6znj7FIQ0PgZ5" async> </script> </form>
             </div>
 
             <p><a href="/terms.html">Terms and Conditions</a></p>
