--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             <p>Buy Credit to get full access to Kshetrapal's powerful features. You can buy and use on multiple devices.</p>
 
             <div class="payment-options">
-                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q6znj7FIQ0PgZ5" async> </script> </form>
+                <form>
+                    <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q71uWwqkrA71gr" async> </script>
+                </form>
             </div>
 
             <p><a href="/terms.html">Terms and Conditions</a></p>
