--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 
         <hr />
         <div class="cta">
-            <form><script src="https://cdn.razorpay.com/static/widget/subscription-button.js" data-subscription_button_id="pl_Q3yzjZETmJ7Tdb" data-button_theme="brand-color" async> </script> </form>
+            <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q5YJJ4z0gkjNWy" async> </script> </form>
         </div>
     </div>
 
