--- a/index.html
+++ b/index.html
@@ -116,13 +116,12 @@
             <p>Buy Credit to get full access to Kshetrapal's powerful features. You can buy and use on multiple devices.</p>
 
             <div class="payment-options">
-                <script src="https://www.paypal.com/sdk/js?client-id=BAA7vgHnN9PhMc13u_oJeFxrG1Pg8_94mHB0L3nE4TkfxyAx_Iw-dmBe7uCGDfJ-IEr0cso89ClzHSblV8&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
-                <div id="paypal-container-EZP5AJQHDDVM8"></div>
-                <script>
-                  paypal.HostedButtons({
-                    hostedButtonId: "EZP5AJQHDDVM8",
-                  }).render("#paypal-container-EZP5AJQHDDVM8")
-                </script>
+                <style>.pp-EZP5AJQHDDVM8{text-align:center;border:none;border-radius:1.5rem;min-width:11.625rem;padding:0 2rem;height:2rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:0.875rem;line-height:1.125rem;cursor:pointer;}</style>
+                <form action="https://www.paypal.com/ncp/payment/EZP5AJQHDDVM8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
+                  <input class="pp-EZP5AJQHDDVM8" type="submit" value="Buy Now" />
+                  <img src=https://www.paypalobjects.com/images/Debit_Credit_APM.svg alt="cards" />
+                  <section> Powered by <img src="https://www.paypalobjects.com/paypal-ui/logos/svg/paypal-wordmark-color.svg" alt="paypal" style="height:0.875rem;vertical-align:middle;"/></section>
+                </form>
             </div>
 
             <p><a href="/terms.html">Terms and Conditions</a></p>
