--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <p>Buy Credit to get full access to Kshetrapal's powerful features. You can buy and use on multiple devices.</p>
 
             <div class="payment-options">
+                <img src="MagenSec-qrcode.png" />
                 <style>.pp-EZP5AJQHDDVM8{text-align:center;border:none;border-radius:1.5rem;min-width:11.625rem;padding:0 2rem;height:2rem;font-weight:bold;background-color:#FFD140;color:#000000;font-family:"Helvetica Neue",Arial,sans-serif;font-size:0.875rem;line-height:1.125rem;cursor:pointer;}</style>
                 <form action="https://www.paypal.com/ncp/payment/EZP5AJQHDDVM8" method="post" target="_blank" style="display:inline-grid;justify-items:center;align-content:start;gap:0.5rem;">
                   <input class="pp-EZP5AJQHDDVM8" type="submit" value="Buy Now" />
