Refactor and rewrite content

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
     </style>
 </head>
 <body>
-
+    <p><a href="/">Back to Home</a></p>
     <div class="container">
         <h1>Protect Your Devices & Data with Next-Gen Threat & Vulnerability Monitoring</h1>
 
@@ -141,11 +141,7 @@
             <p>Some states do not allow the exclusion or limitation of liability for consequential or incidental damages, so this limitation may not apply.</p>
         </div>
 
-        <hr />
-        <div class="cta">
-            <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Q5YJJ4z0gkjNWy" async> </script> </form>
-        </div>
     </div>
-
+    <p><a href="/">Back to Home</a></p>
 </body>
 </html>
