--- a/terms.html
+++ b/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Terms & Conditions, Policies & Contact</title>
+<title>Privacy, Policy, Terms & Conditions</title>
 <style>
 body {
   font-family: sans-serif;
@@ -16,20 +16,20 @@ h2 {
 </head>
 <body>
 
-  <h1>Terms & Conditions, Policies & Contact</h1>
+  <h1>Privacy, Policy, Terms & Conditions</h1>
 
 <p><a href="/">Back to Home</a></p>
 
   <h2>Terms and Conditions</h2>
 
-  <p>Welcome to MagenSec Kshetrapal. By downloading, installing, or using our software, you agree to comply with and be bound by the following terms and conditions. Please read them carefully.</p>
+  <p>Welcome to Gigabits MagenSec. By downloading, installing, or using our software, you agree to comply with and be bound by the following terms and conditions. Please read them carefully.</p>
 
   <ol>
-    <li><strong>Software Description:</strong> MagenSec Kshetrapal is an auditing tool designed to help users identify potential security vulnerabilities on their devices. It utilizes public vulnerability databases and other information sources to perform its audits.</li>
+    <li><strong>Software Description:</strong> Gigabits MagenSec is an auditing tool designed to help users identify potential security vulnerabilities on their devices. It utilizes public vulnerability databases and other information sources to perform its audits.</li>
     <li><strong>No System Alterations:</strong> Our software does not make any changes to your system unless explicitly requested by the user. It is primarily an auditing tool.</li>
     <li><strong>Limitation of Liability:</strong>
       <ul>
-        <li>MagenSec Kshetrapal is provided "as is" and "as available." We make no warranties, express or implied, regarding the accuracy, completeness, or reliability of the software's output.</li>
+        <li>Gigabits MagenSec is provided "as is" and "as available." We make no warranties, express or implied, regarding the accuracy, completeness, or reliability of the software's output.</li>
         <li>We shall not be liable for any errors, inaccuracies, or omissions in the software's reports, including but not limited to false positives or true negatives.</li>
         <li>You acknowledge and agree that your use of the software is at your sole risk. We shall not be liable for any direct, indirect, incidental, consequential, or punitive damages arising from your use of the software.</li>
         <li>We do not guarantee that the software will identify all potential vulnerabilities on your system.</li>
@@ -42,22 +42,22 @@ h2 {
         <li>License activation may experience delays due to technical issues.</li>
       </ul>
     </li>
-    <li><strong>License Activation:</strong> Customers should contact talktomagenec@gmail.com for any license activation or technical issues.</li>
+    <li><strong>License Activation:</strong> Customers should contact magensec@gigabits.co.in for any license activation or technical issues.</li>
     <li><strong>Changes to Terms:</strong> We reserve the right to modify these terms and conditions at any time. Any changes will be posted on this page.</li>
   </ol>
 
   <h2>Contact Details</h2>
 
   <p>For support, inquiries, or subscription cancellations, please contact us at:</p>
-  <p>Email: <a href="mailto:talktomagenec@gmail.com">talktomagenec@gmail.com</a></p>
+  <p>Email: <a href="mailto:magensec@gigabits.co.in">magensec@gigabits.co.in</a></p>
 
   <h2>Shipping and Delivery</h2>
 
-  <p>As MagenSec Kshetrapal is a digital product, there is no physical shipping. Delivery consists of granting access to the full functionality of the software upon successful subscription and license activation. Please check your email and the software itself for confirmation of activation. If you have any problems, please contact us.</p>
+  <p>As Gigabits MagenSec is a digital product, there is no physical shipping. Delivery consists of granting access to the full functionality of the software upon successful subscription and license activation. Please check your email and the software itself for confirmation of activation. If you have any problems, please contact us.</p>
 
   <h2>Refund Policy</h2>
 
-  <p>All subscription payments are non-refundable. However, you may cancel your subscription at any time. To cancel your subscription, please email us at talktomagenec@gmail.com. Cancellations will be processed within 15 business days.</p>
+  <p>All subscription payments are non-refundable. However, you may cancel your subscription at any time. To cancel your subscription, please email us at magensec@gigabits.co.in. Cancellations will be processed within 15 business days.</p>
 
   <h2>Privacy Policy</h2>
 
@@ -81,5 +81,6 @@ h2 {
     <li><strong>Data Retention:</strong> We retain your data for as long as necessary to provide you with our services and as required by law.</li>
   </ol>
 
+  <p>🗒 Last Updated on March 1, 2025</p>
 </body>
 </html>
