--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div class="container">
 					<header>
 						<h2>Download MagenSec</h2>
-						<p>Protect your devices with MagenSec. Download the free version for a limited preview, or unlock the full power with a license.</p>
+						<p>Protect your devices with MagenSec.<br /> Download the free version for a limited preview, or unlock the full power with a license.</p>
 					</header>
                     <h3>Choose Your Download</h3>
 					<div class="row aln-center">
