minor: icon update for cross-platform

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <strong>Empower Your Team</strong>: MagenSec provides comprehensive security reports that highlights potential employee security risks. Empower your team to be your first line of defense with clear, actionable data. MagenSec's reporting features can be used to monitor and detect risky user behaviors, which helps to train employees, and reduce insider threats. Invest in employee training for a stronger security posture.
                     </section>
                     <h3>Here's how MagenSec protects you:</h3>
-					<div class="row  aln-center">
+					<div class="row aln-center">
                         <div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span style="font-size: 50px;">🔒</span>
@@ -136,7 +136,7 @@
 
                         <div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span style="font-size: 80px;">🌐</span>
+								<span style="font-size: 80px;">🔮</span>
 								<p></p>
 								<h3>Cross-Platform Support</h3>
 								<p>Seamlessly protects your Windows, Linux, macOS, Android and iOS mobile devices*.</p>
