--- a/index.html
+++ b/index.html
@@ -30,17 +30,22 @@
 		<!-- Home -->
 			<article id="top"  class="wrapper style1">
 				
+			
+				<header class="special container">
+					<h1><strong>MagenSec</strong></h1>
+					<h3>Your Proactive Defense Against Cyber Threats</h3>
+				</header>
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
+							<p></p>
 							<span class="image fit"><img src="images/green_icon.ico" alt="" /></span>
 							<p></p>
-							<p style="text-align:center;" id="blink">🎁 Limited Time 🎁 <br /> Secure Unlimited Devices for Just $4.99!</p>
+							<p style="text-align:center;" id="blink">🎁 Limited Time 🎁 <br />
+								Secure Unlimited Devices for Just $4.99!
+							</p>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1><strong>MagenSec</strong></h1>
-							</header>
                             <p>In today's digital age, cyber threats are constantly evolving. Individuals and Small businesses are the target of 43% of cyberattacks. Cybercriminals don't wait, and neither should your security. </p>
 							<p>MagenSec, developed by ⚡ <strong><a href="http://gigabits.co.in">Gigabits</a></strong>, provides comprehensive security auditing and automated hardening to protect you from evolving threats and shield your devices from advanced cyber threats. For a limited time, secure all your devices for just <strong>$4.99</strong> per year.</p>
                             <p>Reduce the risk of data breaches and gain peace of mind. Take control of your cybersecurity now.</p>
